<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whisper_bringup</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>whisper</exec_depend>
  <exec_depend>whisper_cpp_vendor</exec_depend>
  <exec_depend>whisper_msgs</exec_depend>
  <exec_depend>whisper_wrapper</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
