<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whisper_demos</name>
  <version>1.3.1</version>
  <description>Demos for using the ROS 2 whisper package.</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>MIT</license>

  <exec_depend>audio_listener</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>whisper_idl</exec_depend>
  <exec_depend>whisper_server</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>